--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,9 @@
 @import "./components/general-style";
 @import "./components/button";
 @import "./components/title";
+@import "./components/slider";
 
 
 @import "./components/header";
 @import "./components/methods";
+@import "./components/reviews";
