--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -43,6 +43,15 @@
 							</div>
 						</div>
 					</div>
+					<div class="slider-reviews__slide">
+						<div class="reviews__slide slide">
+							<p> Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Velit officia consequat duis enim velit mollit. </p>
+							<div class="slide__author">
+								<a style="background-image: url(../img/reviews/2.png);"></a>
+								<p>Имя клиента</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
