--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,8 +3,10 @@
 @import "./components/button";
 @import "./components/title";
 @import "./components/slider";
+@import "./components/form";
 
 
 @import "./components/header";
 @import "./components/methods";
 @import "./components/reviews";
+@import "./components/feedback";
