--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,46 @@
-<footer class="footer">
-  <div class="container"></div>
+<footer class="footer block-grey">
+	<div class="wrapper">
+		<div class="footer__content">
+			<div class="footer__logo">
+				<a href="" class="logo"></a>
+			</div>
+			<div class="footer__nav nav">
+				<a href="" class="nav__elem">Услуги</a>
+				<a href="" class="nav__elem">Примеры работ</a>
+				<a href="" class="nav__elem">Калькуляторы</a>
+				<a href="" class="nav__elem">О компании</a>
+				<a href="" class="nav__elem">Контакты</a>
+			</div>
+			<div class="footer__contacts">
+				<h3 class="footer__smalltitle">Контакты</h3>
+				<div class="footer__numbers numbers">
+					<a href="" class="numbers__icon"></a>
+					<div class="numbers__tel">
+						<a class="numbers__tel_bold" href="">+7 (812) 929-16-17</a>
+						<a href="">+7 (911) 929-16-17</a>
+					</div>
+				</div>
+				<div class="footer__mail">
+					<a href="" class="mail-icon"></a>
+					<a href="">info@plitka.com</a>
+				</div>
+				<div class="footer__schedule">
+					<span>График работы:</span> 09:00 - 19:00 ПН-ПТ
+				</div>
+			</div>
+			<div class="footer__soc">
+				<h3 class="footer__smalltitle">Соцсети</h3>
+				<div class="soc">
+					<a href="" class="soc__icon" style="background-image: url(../img/inst.svg);"></a>
+					<a href="" class="soc__icon" style="background-image: url(../img/vk.svg);"></a>
+					<a href="" class="soc__icon" style="background-image: url(../img/face.svg);"></a>
+					<a href="" class="soc__icon" style="background-image: url(../img/you.svg);"></a>
+				</div>
+				<a href="" class="footer__button button button_orange">Заказать звонок</a>
+			</div>
+		</div>
+	</div>
+	<div class="footer__cop">
+		© Благоустройства участка 2021
+	</div>
 </footer>
