--- a/src/partials/methods.html
+++ b/src/partials/methods.html
@@ -5,9 +5,9 @@
 		</div>
 		<div class="methods__content">
 			<div class="methods__media">
-				<a href="" class="methods__img" style="background-image: url(../img/methods/1.png);"></a>
-				<a href="" class="methods__img" style="background-image: url(../img/methods/2.png);"></a>
-				<a href="" class="methods__video" style="background-image: url(../img/methods/3.png);"></a>
+				<a href="" class="methods__img" style="background-image: url(img/methods/1.png);"></a>
+				<a href="" class="methods__img" style="background-image: url(img/methods/2.png);"></a>
+				<a href="" class="methods__video" style="background-image: url(img/methods/3.png);"></a>
 			</div>
 			<div class="methods__text">
 				<p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
