--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,9 +4,11 @@
 @import "./components/title";
 @import "./components/slider";
 @import "./components/form";
+@import "./components/nav";
 
 
 @import "./components/header";
 @import "./components/methods";
 @import "./components/reviews";
 @import "./components/feedback";
+@import "./components/footer";
