--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -20,7 +20,7 @@
 						<div class="reviews__slide slide">
 							<p> Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
 							<div class="slide__author">
-								<a style="background-image: url(../img/reviews/1.png);"></a>
+								<a style="background-image: url(img/reviews/1.png);"></a>
 								<p>Имя клиента</p>
 							</div>
 						</div>
@@ -29,7 +29,7 @@
 						<div class="reviews__slide slide">
 							<p> Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Velit officia consequat duis enim velit mollit. </p>
 							<div class="slide__author">
-								<a style="background-image: url(../img/reviews/2.png);"></a>
+								<a style="background-image: url(img/reviews/2.png);"></a>
 								<p>Имя клиента</p>
 							</div>
 						</div>
@@ -38,7 +38,7 @@
 						<div class="reviews__slide slide">
 							<p> Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
 							<div class="slide__author">
-								<a style="background-image: url(../img/reviews/1.png);"></a>
+								<a style="background-image: url(img/reviews/1.png);"></a>
 								<p>Имя клиента</p>
 							</div>
 						</div>
@@ -47,7 +47,7 @@
 						<div class="reviews__slide slide">
 							<p> Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Velit officia consequat duis enim velit mollit. </p>
 							<div class="slide__author">
-								<a style="background-image: url(../img/reviews/2.png);"></a>
+								<a style="background-image: url(img/reviews/2.png);"></a>
 								<p>Имя клиента</p>
 							</div>
 						</div>
