--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -18,6 +18,7 @@
 		font-weight: normal;
 		font-size: 18px;
 		line-height: 25px;
+		outline: none;
 	}
 	&__button {
 		background-color: #B4C100 !important;
@@ -47,5 +48,6 @@
 		font-weight: normal;
 		font-size: 18px;
 		line-height: 25px;
+		outline: none;
 	}
 }
