--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -16,13 +16,13 @@
 				<div class="footer__numbers numbers">
 					<a href="" class="numbers__icon"></a>
 					<div class="numbers__tel">
-						<a class="numbers__tel_bold" href="">+7 (812) 929-16-17</a>
-						<a href="">+7 (911) 929-16-17</a>
+						<a class="numbers__tel_bold" href="tel:+78129291617">+7 (812) 929-16-17</a>
+						<a href="tel:+79119291617">+7 (911) 929-16-17</a>
 					</div>
 				</div>
 				<div class="footer__mail">
 					<a href="" class="mail-icon"></a>
-					<a href="">info@plitka.com</a>
+					<a href="mailto:info@plitka.com">info@plitka.com</a>
 				</div>
 				<div class="footer__schedule">
 					<span>График работы:</span> 09:00 - 19:00 ПН-ПТ
