--- a/src/scss/components/_methods.scss
+++ b/src/scss/components/_methods.scss
@@ -36,6 +36,7 @@
 		height: 327px;
 		transition: 0.3s ease;
 		border-radius: 15px;
+		cursor: default;
 		&:hover {
 			background-size: 120%;
 		}
